src/_webapp/ressources/css/karaokemugen.css
/* ... */
.playlistContainer[flipped="true"]:after {
	-moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
}
.playlistContainer[noGreyFace]:after {
	filter: grayscale(18%);
    opacity : 0.38;
}

.playlistContainer > ul {
	margin-bottom: 20px; /* SUPER IMPORTANT TO AVOID (edit: not really) A WEIRD ASS CHROME BUG DESCRIBED HERE https://github.com/TryGhost/Ghost/issues/7934 */
	will-change: -moz-transform;
	position: relative;
	z-index: 2;
}

#playlist1.list-group > li.list-group-item  > .actionDiv, #playlist1.list-group > li.list-group-item  > .actionDiv > span, 
#playlist2.list-group > li.list-group-item  > .infoDiv {
	float: right;
}

#playlist2.list-group > li.list-group-item  > .actionDiv, #playlist2.list-group > li.list-group-item  > .actionDiv > span,
#playlist1.list-group > li.list-group-item  > .infoDiv {
	float: left;
}

bdg {
	background-color: hsl(213, 20%, 16%);
	padding: 0px 5px;
	margin-left: 2px;
	width: 45px;
	text-align: center;
    font-weight: bold;
    color: #aaa;
    box-shadow: 0 6px 8px 2px rgba(0, 0, 0, 0.02), 0 1px 5px 2px rgba(0, 0, 0, 0.015), 0 2px 3px -1px rgba(0, 0, 0, 0.02);
	float: right;
	z-index: 250;
}

bdgc {
	background-color: hsla(0, 0%, 35%, .91);
	background-color: hsla(174, 8%, 34%, .95);
    color: hsla(0, 0%, 77%, 1);
}

.highlight-active.playlistContainer {
	outline: 3px solid #235a42;
}
.highlight-hover.playlistContainer {
	__background-color:  #233a35;
	outline: 5px solid #235a42;
}

.hLight {
	position :absolute;
	width: 100%;
	z-index:-1;
	left:0;
	top:0;
	height:100%;
	background-color:rgba(120, 148, 86, 0.6);
	opacity: 0;
}

.dropdown-menu {
	background-color: #3b3e44;
	border: solid 1px hsla(0, 0%, 35%, 1);
}
.dropdown-menu > li >a {
	color : #eee;
}

.dropdown-menu > li > a > i {
    margin-right: 4px;
}
.dropdown-menu > li:hover > a {
	color : #222;
	background-color: #9e9e9e;
}

#blacklistCriteriasInputs .select2 {
	display: inline-block;
}
#blacklistCriteriasInputs input {
	height: 34px;
	width: auto;
}
.select2-dropdown {
	z-index: 10000;
}
.panel-heading .select2 {
	width: auto !important;
	overflow:hidden;
}
.panel-heading button.btn-lg {
	height: 46px;
}

.panel-heading .select2-container--bootstrap .select2-selection--single {
	__height: 100%;
	__line-height: 2.3;
}
.select2-container--bootstrap .select2-selection--single, .select2-dropdown {
	border-radius: 0 !important;
	background-color: #f3f3f3;
	font-weight: 600;
}
.select2-container--bootstrap .select2-results__option {
	color: #555;
}
.select2-container--default .select2-results__option[aria-disabled=true] {
    display: none;
}
.select2-results__option > span > i, .select2-selection > span > span > i  {
	float: right;
	padding-left: 3px;
}
.select2-selection > span > span > i {
	__line-height: 2.3;
	line-height: 1.35;
}

.toastMessageContainer {
	position: absolute;
	top: 0;
	left: 50%;
    transform: translateX(-50%);
    position: fixed;
	z-index: 10070;
	max-width:600px;
	min-width:250px;
}
.toastMessage {
	cursor: pointer;
	position: relative;
	overflow: hidden;
	padding: 10px;
	margin: 7px;
    box-shadow: 2px 2px 1px #a5a5a5;
	z-index: 10070;
	opacity: 0;
	transition: opacity ease .5s;
}
.toastMessage.dismiss {
	opacity: 0 !important;
}

.contentDiv h {
	background-color : #82bdad;
	color: black;
}

button.closePopupParent {
	z-index: 9998;
	position: absolute;
	top: 5px;
	right: 5px;
	width: auto;
	height: auto;
}


.input-lg, .input-md {
	border-radius: 0;
}
.input-lg {
	padding-top: 15px;
}

.flipped {
    transform: scaleX(-1);
    -moz-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    -ms-transform: scaleX(-1);
}

#video {
	z-index: 9200;
	width: auto;
	height: auto;
    top: 50%;
    position: absolute;
    left: 50%;
	transform: translateX(-50%) translateY(-50%);
	box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.3);
}

.overlay {
    background-color: hsla(0, 0%, 17%, 0.67);
    display: none;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

/* Range input sliders */

/* standard slider */

input[type=range]:focus {
	outline: none;
}

.header input[type=range] {
  -webkit-appearance: none;
  margin: 0;
  position: absolute;
  bottom: 0;
  bottom: -33px\0/;	/* specific to IE */
  margin-left: -1px\0/;	/* specific to IE */
  width: inherit;
}


/* settings slider */

#settings input[type=range] {
  -webkit-appearance: none;
  width: 100%;
  margin: 11.5px 0;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 14px;
  cursor: pointer;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(13, 13, 13, 0.03);
  background: #ffffff;
  border-radius: 0px;
  border: 0.1px solid rgba(0, 1, 1, 0.36);
}
input[type=range]::-webkit-slider-thumb {
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
  border: 1px solid #D8D8D8;;
  height: 18px;
  width: 22px;
  border-radius: 0px;
  background: #575757;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -3px;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: #ffffff;
}

input[type=range]::-moz-range-track {
  width: 100%;
  height: 14px;
  cursor: pointer;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(13, 13, 13, 0.03);
  background: #ffffff;
  border-radius: 0px;
  border: 0.1px solid rgba(0, 1, 1, 0.36);
}
input[type=range]::-moz-range-thumb {
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
	border: 1px solid #D8D8D8;
	height: 18px;
	width: 22px;
	border-radius: 0px;
	background: #575757;
	cursor: pointer;
	-webkit-appearance: none;
	margin-top: -1px;
}
input[type=range]::-ms-track {
  width: 100%;
  height: 14px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
/* ... */

